<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Unisample</string>
    <string name="action_take_photo">Take Pictures</string>
    <string name="action_choose_photo">Select</string>
    <string name="photo_select_failed">Choose failed</string>
    <string name="photo_crop_failed">Reduction failed</string>
    <string name="photo_take_failed">Take photo failed</string>
    <string name="photo_take_success">Take photo success</string>
    <string name="permission_explain_msg">Following permissions are required. Do you want to request for the next step?</string>
    <string name="permission_to_settings_msg">Permission request failed. Do you want to enter the System Settings to grant these permissions?</string>
    <string name="permission_fail">permission_fail</string>
    <string name="ds_unit_config">unit_config</string>
    <string name="unit_year">y</string>
    <string name="unit_month">m</string>
    <string name="unit_day">d</string>
    <string name="unit_day_count">days</string>
    <string name="unit_day_count_param"><xliff:g id="params1">%1$d</xliff:g> days</string>
    <string name="unit_hour">hr</string>
    <string name="unit_minute">min</string>
    <string name="unit_minute_param"><xliff:g id="params1">%1$d</xliff:g> minutes</string>
    <string name="unit_mmhg">mmHg</string>
    <string name="unit_mmhg_param"><xliff:g id="params1">%1$s</xliff:g> mmHg</string>
    <string name="unit_bmp">BMP</string>
    <string name="unit_bmp_unit"><xliff:g id="params1">%1$d</xliff:g> BMP</string>
    <string name="unit_level_param"><xliff:g id="params1">%1$d</xliff:g> Level</string>
    <string name="unit_second_param"><xliff:g id="params1">%1$d</xliff:g> Seconds</string>
    <string name="unit_km">km</string>
    <string name="unit_mi">mi</string>
    <string name="unit_step">steps</string>
    <string name="unit_k_calories">kCal</string>
    <string name="unit_km_param"><xliff:g id="params1">%1$s</xliff:g> km</string>
    <string name="unit_mi_param"><xliff:g id="params1">%1$s</xliff:g> mi</string>
    <string name="unit_step_param"><xliff:g id="params1">%1$d</xliff:g> steps</string>
    <string name="unit_k_calories_param"><xliff:g id="params1">%1$s</xliff:g> kCal</string>
    <string name="unit_fahrenheit_param"><xliff:g id="params1">%1$s</xliff:g> ℉</string>
    <string name="unit_centigrade_param"><xliff:g id="params1">%1$s</xliff:g> ℃</string>
    <string name="device_module">Device</string>
    <string name="device_bind">Bind Device</string>
    <string name="device_scan_bind">Scan code binding</string>
    <string name="device_others">Other devices</string>
    <string name="device_others_des">Devices bonded or connected will not appear in search results</string>
    <string name="device_bonded">Bonded device</string>
    <string name="device_connected">Connected device</string>
    <string name="device_bind_tips1">Make sure the watch is fully charged</string>
    <string name="device_bind_tips2">Keep the watch and the mobile phone within 0.5 meters</string>
    <string name="device_bind_tips3">Search for places with few Bluetooth devices</string>
    <string name="device_bind_tips4">Make sure the watch is not bonded or connected by another phone</string>
    <string name="device_scan_tips_location_service">Location Services is disabled and devices may not be discoverable.</string>
    <string name="device_scan_tips_error">Scanning error occurred</string>
    <string name="device_scan_tips_delay">Please wait a few seconds and try again</string>
    <string name="device_scan_tips_restart">Please wait a few seconds and try again, or restart bluetooth or mobile phone</string>
    <string name="device_cancel_bind">Cancel Bind</string>
    <string name="device_unbind">Unbind</string>
    <string name="device_unbind_confirm_msg">Are you sure to unbind this device?</string>
    <string name="device_bind_success">Bind success</string>
    <string name="device_rebind">Rebind</string>
    <string name="device_reconnect">Reconnect</string>
    <string name="device_connect_auth_login_failed">The device may have been bound to another phone.</string>
    <string name="device_connect_auth_bind_failed">The device cancel bind or no response</string>
    <string name="device_connect_bg_run_settings">If the connection is unstable, try setting the option to run in the background.</string>
    <string name="device_disconnect_help">Unable to connect？</string>
    <string name="bg_run_settings_module">Background Running settings</string>
    <string name="bg_run_settings_des">You need to make some system settings so that APP can run in the background for a long time, for example:</string>
    <string name="bg_run_settings_1">Ignore battery optimization</string>
    <string name="bg_run_settings_2">Disabled power-saving mode</string>
    <string name="bg_run_settings_3">Allow background auto-start</string>
    <string name="bg_run_settings_4">Add white list to the system manager</string>
    <string name="module_sync">Sync</string>
    <string name="sync_state_idle">Pull down to sync data</string>
    <string name="sync_data_success">Sync success</string>
    <string name="sync_data_failed">Sync fail</string>
    <string name="sync_data_ongoing">Syncing data</string>
    <string name="module_user">User</string>
    <string name="action_loading">Loading…</string>
    <string name="action_deling">deleting…</string>
    <string name="action_updating">updating…</string>
    <string name="action_updating_progress">updating:</string>
    <string name="action_search">Search</string>
    <string name="action_turn_on">Turn On</string>
    <string name="action_grant">Grant</string>
    <string name="action_to_set">To Set</string>
    <string name="action_save">Save</string>
    <string name="action_start">Start</string>
    <string name="action_retry">Retry</string>
    <string name="action_select">Select</string>
    <string name="action_add">Add</string>
    <string name="tip_prompt">Hint</string>
    <string name="tip_none">None</string>
    <string name="tip_i_know">I know</string>
    <string name="tip_please_wait">Please wait&#8230;</string>
    <string name="tip_save_success">Save success</string>
    <string name="tip_success">Success</string>
    <string name="tip_failed">Failed</string>
    <string name="tip_download_failed">Download failed</string>
    <string name="tip_current_no_data">No data yet</string>
    <string name="tip_load_error">Load failed, click reload</string>
    <string name="tip_disabled">Disabled</string>
    <string name="tip_setting_loading">Setting up…</string>
    <string name="tip_setting_fail">Setup failed, do you want to try again?</string>
    <string name="tip_setting_success">Setup success</string>
    <string name="percent_param" translatable="false"><xliff:g id="params1">%1$d</xliff:g>%%</string>
    <string name="exercise_goal">Exercise Goal</string>
    <string name="exercise_goal_step">Step</string>
    <string name="exercise_goal_distance">Distance</string>
    <string name="exercise_goal_calories">Calories</string>
    <string name="exercise_goal_activity">Activity Duration</string>
    <string name="account_sign_in">Sign In</string>
    <string name="account_input_username_hint">Input username</string>
    <string name="account_input_password_hint">Input password</string>
    <string name="account_no">No account?</string>
    <string name="account_sign_up">Sign Up</string>
    <string name="account_input_height_hint">Input height(cm),such as \"175\"</string>
    <string name="account_input_weight_hint">Input weight(kg),such as \"60\"</string>
    <string name="account_sex_male">Male</string>
    <string name="account_sex_female">Female</string>
    <string name="account_height_error">Please enter a reasonable height</string>
    <string name="account_weight_error">Please enter a reasonable weight</string>
    <string name="account_input_age_hint">Input age,such as \"20\"</string>
    <string name="account_age_error">Please enter a reasonable age</string>
    <string name="account_sign_up_success">Sign up success</string>
    <string name="account_sign_out">Sign out</string>
    <string name="account_sign_out_ing">Sign out…</string>
    <string name="account_edit_user_info">Edit User Info</string>
    <string name="account_edit_birthday">Edit User BirthdaY</string>
    <string name="ds_config">Device Config</string>
    <string name="ds_config_start_time">Start Time</string>
    <string name="ds_config_end_time">End Time</string>
    <string name="ds_config_interval_time">Interval Time</string>
    <string name="ds_page_config">Page Config</string>
    <string-array name="ds_page_names">
        <item>Time</item>
        <item>Steps</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Sleep</item>
        <item>Heart rate</item>
        <item>Oxygen</item>
        <item>Blood pressure</item>
        <item>Weather</item>
        <item>Find Phone</item>
        <item>ID</item>
        <item>StopWatch</item>
    </string-array>
    <string name="ds_function_config">Function Config</string>
    <string name="ds_sound_touch_config">Sound Touch Feedback Config</string>
    <string name="ds_is_ring_when_call_come_in">Whether the bell rings when the call comes in</string>
    <string name="ds_is_notification_touch">Whether there is a notification touch</string>
    <string name="ds_is_crown_has_tactile_feedback">Whether the crown has tactile feedback</string>
    <string name="ds_is_system_has_tactile_feedback">Whether the system has tactile feedback</string>
    <string name="ds_is_mute">Whether mute</string>
    <string name="ds_wear_right_hand">Right Hand Wearing</string>
    <string name="ds_enhanced_measurement">Enhanced Measurement</string>
    <string name="ds_time_format_12_hour">Time Format-12 Hour</string>
    <string name="ds_length_unit_imperial">Length Units-Imperial(miles, feet)</string>
    <string name="ds_temperature_unit_fahrenheit">Temperature Units-Fahrenheit(℉)</string>
    <string name="ds_display_weather">Display Weather</string>
    <string name="ds_test_weather">Test Weather</string>
    <string name="ds_disconnect_reminder">Disconnect Reminder</string>
    <string name="ds_display_exercise_goal">Display Exercise Goal</string>
    <string name="ds_health_monitor_config">Health Monitor Config</string>
    <string name="ds_sedentary_config">Sedentary Reminder Config</string>
    <string name="ds_drink_water_config">Drink Water Reminder Config</string>
    <string name="ds_no_disturb_lunch_break">No disturb lunch break</string>
    <string name="ds_blood_pressure_config">Blood Pressure Reference Config</string>
    <string name="ds_sbp">Systolic pressure</string>
    <string name="ds_dbp">Diastolic pressure</string>
    <string name="ds_turn_wrist_lighting_config">Raise to Wake Config</string>
    <string name="ds_dnd_config">DND Config</string>
    <string name="ds_screen_vibrate">Screen And Vibrate Config</string>
    <string name="ds_notification_config">Notification Config</string>
    <string name="ds_notification_telephony">Telephony</string>
    <string name="ds_notification_sms">SMS</string>
    <string name="ds_notification_qq">QQ</string>
    <string name="ds_notification_wechat">WeChat</string>
    <string name="ds_notification_facebook">Facebook</string>
    <string name="ds_notification_twitter">Twitter</string>
    <string name="ds_notification_instagram">Instagram</string>
    <string name="ds_notification_whatsapp">WhatsApp</string>
    <string name="ds_notification_line">Line</string>
    <string name="ds_notification_messenger">Facebook Messenger</string>
    <string name="ds_notification_kakao_talk">Kakao Talk</string>
    <string name="ds_notification_skype">Skype</string>
    <string name="ds_notification_email">Email</string>
    <string name="ds_notification_others">Others App</string>
</resources>