<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_telephony"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_telephony"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_sms"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_sms"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_qq"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_qq"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_wechat"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_wechat"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_facebook"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_facebook"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_twitter"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_twitter"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_instagram"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_instagram"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_whatsapp"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_whatsapp"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_line"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_line"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_messenger"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_messenger"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_kakao_talk"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_kakao_talk"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_skype"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_skype"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_email"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_email"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_others"
            style="@style/Widget.Item.Switch"
            app:showSwitch="true"
            app:name="@string/ds_notification_others"/>

    </LinearLayout>

</ScrollView>