<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?dividerVertical"
        android:orientation="vertical"
        android:showDividers="middle">

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_step"
            style="@style/Widget.Item.Text"
            app:name="@string/exercise_goal_step"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_distance"
            style="@style/Widget.Item.Text"
            android:visibility="gone"
            app:name="@string/exercise_goal_distance"/>

        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_calories"
            style="@style/Widget.Item.Text"
            app:name="@string/exercise_goal_calories"/>
        <com.sjbt.sdk.sample.widget.PreferenceItemView
            android:id="@+id/item_activity_duration"
            style="@style/Widget.Item.Text"
            app:name="@string/exercise_goal_activity"/>
    </LinearLayout>

</ScrollView>
